This closes #25, closes #23 and fixes line spacing on p

--- a/wp-content/themes/cpipr/less/style.less
+++ b/wp-content/themes/cpipr/less/style.less
@@ -72,7 +72,6 @@ body {
 
 p {
   font-family: 'Merriweather light', sans-serif;
-  line-height: 3.5rem;
 }
 
 #page {
